--- a/index.html
+++ b/index.html
@@ -1,8 +1,10 @@
 <DOCTYPE html> 
 <html>
+  <title>Vaporwave Trash</title>
+  
 
 <body>
-<p> vaporwave</p>
+<p> vaporwave trash coming soon</p>
 </body>
 
 
